modified permission on appspec

--- a/appspec.yml
+++ b/appspec.yml
@@ -3,8 +3,10 @@ os: linux
 files:
   - source: / 
     destination: /var/www/loadtest/src
-object: /var/www/loadtest/src
+  - object: /var/www/loadtest/src
     mode: 644
     owner: nginx
+    group: nginx
     type:
       - directory
+      - file
