--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,7 @@ os: linux
 files:
   - source: source 
     destination: /var/www/loadtest/src
+permission:
   - object: /var/www/loadtest/src
     mode: 644
     owner: nginx
