--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,7 @@ files:
   - source: / 
     destination: /var/www/loadtest/src
 permission:
-  - object: /var/www/loadtest/src
+  - object: /var/www/loadtest/src/*
     mode: 644
     owner: nginx
     group: nginx
